# hypercoplexAI

./: .gitignore  CONTRIBUTING.md  HDIM.md  README.md  _read_sources.py  hdim_demo.py  pyproject.toml  requirements.txt  run_memory_comparison.py  test_phase17.py  verify_lean4_numerical.py
artifacts/gpu_training/phase26a/: results.json  training_log.jsonl
artifacts/gpu_training/phase26b/: results.json  training_log.jsonl
artifacts/gpu_training/phase26c/: results.json  training_log.jsonl
artifacts/run_018/checkpoints/: best.pt
checkpoints/: hdim_final.pt  online_llm_checkpoint.pt
docs/: ARCHITECTURE.md  DIAGRAMS.md  conf.py
formalization/: Core.lean  Extensions.lean  HDIM.lean  lake-manifest.json  lakefile.lean  verify_numerical.py
formalization/numerical/: algebra_checks.py  hallucination_checks.py  memory_checks.py  moe_checks.py  runner.py
scripts/: __init__.py  auto_tune.py  autoresearch_loop.py  benchmark_can_integration.py  benchmark_comparison.py  benchmark_sota.py  best_autotune.bat  cli.py  expand_pairs.py  gen_dataset_v5.py  gen_dataset_v6.py  gpu_memory_profile.py  gpu_train.py  hdim_decoder.py  interactive_kernel_chat.py  merge_datasets.py  moe_chat.py  neural_decoder.py  online_train_with_llm.py  perf_profile.py  phase17_train.bat  phase19_train.bat  phase20_train.bat  phase24_modernbert.bat  phase25_train.bat  run_moe_demo.py  run_with_llm_experts.py  test_all_modules.py  test_checkpoint_variants.py  test_kernel_chat.py  test_router.py  verify_moe_kernel_real.py
scripts/archive/: autoresearch_loop.py  benchmark_comparison.py  compare_memory_train.py  moe_chat.py  run_moe_demo.py  test_checkpoint_variants.py
src/: __init__.py
src/adapters/: __init__.py  text.py
src/core/: __init__.py  algebra.py  auto_config.py  clifford_interaction.py  cls_memory.py  continual_norm.py  domain_encoder.py  domain_expert_pool.py  domain_operators.py  engine.py  gpu_logger.py  hallucination_detector.py  hallucination_feedback.py  hbma_memory.py  hdim_pipeline.py  hierarchical_memory.py  hypercomplex.py  invariant_index.py  invariant_processor.py  invariants.py  maxscore_router.py  memory_interface.py  memory_persistence.py  modular_moe.py  moe_interface.py  moe_kernel.py  moe_kernel_adapter.py  moe_router.py  msa_attention.py  nars_truth.py  online_learner.py  per_domain_lora.py  prototype_memory.py  rotors.py  semantic_entropy_probe.py  soft_moe_router.py  titans_memory.py  transfer_engine.py  transfer_state.py  types.py
src/core/cuda/: __init__.py  clifford_interaction_kernels.py
src/core/memory/: __init__.py  hbma.py  interface.py  sparse_index.py  titans.py
src/core/moe/: __init__.py  interface.py  kernel.py  soft_router.py  utils.py
src/extensions/: __init__.py  runtime_config.py
src/extensions/encoders/: __init__.py
src/extensions/hallucination/: __init__.py  detector.py  feedback.py  semantic_entropy_probe.py
src/extensions/lora/: __init__.py  online_lora.py
src/extensions/memory/: __init__.py  config.py  consolidation.py  context.py  episodic.py  hbma.py  invariant_processor.py  msa.py  plugin.py  procedural.py  salience.py  semantic.py  truth.py  working.py
src/extensions/moe/: __init__.py  state.py  (+4 more)
src/models/: __init__.py  advanced_text_encoder.py  config.py  hdim_model.py  metrics.py  model_factory.py  modern_text_encoder.py  results.py  sbert_encoder.py  text_encoder_protocol.py  text_hdim_model.py
src/training/: __init__.py  augmentations.py  auto_config.py  dataset.py  experiment_config.py  experiment_runner.py  invariant_losses.py  invariant_trainer.py  losses.py  real_dataset.py  results_logger.py  temperature.py  train.py  trainer.py
tests/: test_augmentation.py  test_auto_config.py  test_can_integration.py  test_checkpoint_migration.py  test_clifford_interaction.py  test_continual_norm.py  test_core_config.py  test_core_engine_api.py  test_core_import_boundary.py  test_core_invariant_index.py  test_core_math.py  test_hallucination_detector.py  test_hallucination_feedback.py  test_hbma_plugin.py  test_hdim.py  test_hdim_pipeline.py  test_invariant_trainer.py  test_kernel_chat.py  test_lean_core_correspondence.py  test_maxscore_router.py  test_memory_comparison.py  test_memory_interface.py  test_memory_persistence.py  test_moe_kernel.py  test_msa_attention.py  test_multi_worker.py  test_nan_inf_forward.py  test_nars_truth.py  test_new_components.py  test_online_learner_gradient.py  test_online_lora.py  test_production_benchmark.py  test_semantic_entropy_probe.py  test_text_adapter.py  test_titans_freeze.py  test_titans_memory.py  test_triton_performance.py
tests/extensions/: test_hallucination_detector.py  test_hallucination_feedback.py  test_hbma_plugin.py  test_matryoshka_modernbert.py  test_memory_comparison.py  test_memory_interface.py  test_moe_kernel.py  test_msa_attention.py  test_nan_inf_forward.py  test_online_learner_gradient.py  test_online_lora.py  test_semantic_entropy_probe.py  test_titans_freeze.py  test_titans_memory.py  test_transfer_engine_moe.py
tests/model/: test_clifford.py  test_dataset.py  test_model_forward.py  test_train_artifacts.py  test_trainer_losses.py
tests/security/: __init__.py  test_checkpoint_integrity.py
verify/: moe_bias_deterministic_probe.py  test_uncovered_core_training_model_seams.py
(+12 files in other folders)
