[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hdim"
version = "0.1.0"
description = "Hypercomplex Deep Inference Model - Semantic similarity with Clifford Geometric Algebra"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HDIM Team", email = "hdim@example.com"}
]
maintainers = [
    {name = "HDIM Team", email = "hdim@example.com"}
]
keywords = [
    "deep-learning",
    "geometric-algebra",
    "semantic-similarity",
    "sentence-transformers",
    "moe",
    "mixture-of-experts",
    "clifford-algebra",
    "pytorch"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch==2.6.0",
    "sentence-transformers==2.7.0",
    "transformers==4.39.0",
    "numpy==1.26.4",
    # Training
    "accelerate==0.28.0",
    "safetensors==0.4.2",
    # Database
    "SQLAlchemy==2.0.28",
    "alembic==1.13.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.1.0",
    "pytest-cov==4.1.0",
    # Type checking
    "mypy==1.8.0",
    # Linting
    "ruff==0.3.0",
]
cuda = [
    # CUDA 12.4 support (torch already includes CUDA wheels)
    # Install with: pip install hdim[cuda] --extra-index-url https://download.pytorch.org/whl/cu124
]
optuna = [
    # Hyperparameter optimization
    "optuna>=3.5.0",
]
all = [
    "hdim[dev,optuna]",
]

[project.scripts]
hdim-train = "scripts.gpu_train:main"
hdim-tune = "scripts.auto_tune:main"
hdim-benchmark = "scripts.benchmark_comparison:main"

[project.urls]
Homepage = "https://github.com/hdim/hdim"
Documentation = "https://github.com/hdim/hdim#readme"
Repository = "https://github.com/hdim/hdim.git"
Issues = "https://github.com/hdim/hdim/issues"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["src", "src.core", "src.models", "src.training"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "sentence_transformers.*",
    "accelerate.*",
    "SQLAlchemy.*",
    "alembic.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
    ".eggs",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument
    "SIM108", # use ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["src", "scripts"]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"scripts/*" = ["ARG"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cuda: marks tests that require CUDA",
    "integration: marks integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"
